fix: footer displayed only when sidebar is not visible

--- a/frontend/src/sass/site-layout/_player-comparison-select-page.scss
+++ b/frontend/src/sass/site-layout/_player-comparison-select-page.scss
@@ -227,4 +227,9 @@ body {
       }
     }
   }
+  .player-comparison-select-page-container-2 {
+    footer {
+      display: none;
+    }
+  }
 }
