--- a/frontend/src/sass/site-layout/_player-review.scss
+++ b/frontend/src/sass/site-layout/_player-review.scss
@@ -22,7 +22,7 @@
   .skills-headline-wrapper {
     display: flex;
     flex-direction: column;
-    gap: .5rem;
+    gap: 0.5rem;
     width: 80%;
     margin: auto;
   }
@@ -42,7 +42,7 @@
   .progressbar-label-container {
     display: flex;
     flex-direction: column;
-    gap: .2rem;
+    gap: 0.2rem;
   }
 
   .player-info {
@@ -78,7 +78,7 @@
     .button {
       background: $primary-color-bright-green;
       border-radius: 49px;
-      padding: .8rem 1.3rem;
+      padding: 0.8rem 1.3rem;
       margin: 0.4rem 0.2rem;
       font-size: unset;
       width: unset;
@@ -137,6 +137,14 @@
       gap: 0;
       margin: auto;
       max-width: 90%;
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .player-review {
+    footer {
+      display: none;
     }
   }
 }
